fix word breaks in long titles

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1167,6 +1167,7 @@ form > .mb-3.required > label:after {
 
 .post_teaser_title_a {
   color: var(--bs-link-color);
+  word-break: break-word;
 }
 .post_teaser_title_a:visited {
   color: color-mix(in srgb, var(--bs-link-color) 65%, white);
@@ -1334,7 +1335,6 @@ ul.form-multicheck-columns li {
 
 .post_teaser_body {
   position: relative;
-  overflow: hidden;
 }
 
 .post_teaser_article_preview, .post_teaser_link_preview {
